<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_album"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_library"
            android:title="@string/artists" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlists"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_songs"
            android:title="@string/songs" />
    </group>

    <item android:title="Dev">
        <menu>
            <item
                android:id="@+id/nav_report_bug"
                android:icon="@drawable/ic_bug_report"
                android:title="@string/report_bug" />
        </menu>
    </item>

</menu>
